Invalidate issued bulletins